feat(app): working form

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
   <head>
-    <meta charset="utf-8" />
-    <title></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cadastro de Pessoa</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <script src="" async defer></script>
+    <section>
+      <h1>Cadastro de Pessoa</h1>
+      <form id="regForm">
+        <label for="name">Nome:</label>
+        <input type="text" id="name" name="name" />
+        <button type="submit">Cadastrar</button>
+      </form>
+    </section>
+    <script src="script.js"></script>
   </body>
 </html>
