--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         Commit history aqui: https://github.com/AdrianoCahete/UVA-DesenvAplDisteWebI
 
         * Se você chegou aqui através do Google: não copie. Dá uma lida ai embaixo que facilita.
+        [ Usei o Notepad++ (por causa das abas e do autosave) ]
+
         O HTML é uma tabela básica, o css foi feito depois da tabela montada, mas são mais padrões de usabilidade do que visual.
         O que deve te pegar é o js.
         
