feat(app): add form validation

--- a/AVA2/index.html
+++ b/AVA2/index.html
@@ -47,6 +47,7 @@
                   <select id="maritalStatus" name="maritalStatus">
                       <option value="single">Solteiro(a)</option>
                       <option value="married">Casado(a)</option>
+                      <option value="other">Outros</option>
                   </select>
               </td>
           </tr>
