--- a/AVA2/index.html
+++ b/AVA2/index.html
@@ -20,72 +20,84 @@
       <form id="regForm">
         <table>
           <tr>
-              <td><label for="fullName" class="required">Nome Completo</label></td>
-              <td><input type="text" id="fullName" name="fullName" min="15" required></td>
+            <td>
+              <label for="fullName" class="required">Nome Completo</label>
+            </td>
+            <td>
+              <input
+                type="text"
+                id="fullName"
+                name="fullName"
+                min="15"
+                required
+              />
+            </td>
           </tr>
           <tr>
-              <td><label for="email" class="required">Email</label></td>
-              <td><input type="email" id="email" name="email" pattern="/^[a-zA-Z0-9.!#$%&'*+\/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$/" min="10" max="320" required></td>
-              <!-- regex da propria spec da W3C: https://html.spec.whatwg.org/multipage/input.html#valid-e-mail-address -->
+            <td><label for="email" class="required">Email</label></td>
+            <td>
+              <input
+                type="email"
+                id="email"
+                name="email"
+                min="10"
+                max="320"
+                required
+              />
+            </td>
           </tr>
           <tr>
-              <td><label for="birthDate" class="required">Data de Nascimento</label></td>
-              <td><input type="date" id="birthDate" name="birthDate" max="2024-06-04"></td>
+            <td>
+              <label for="birthDate" class="required">Data de Nascimento</label>
+            </td>
+            <td>
+              <input
+                type="date"
+                id="birthDate"
+                name="birthDate"
+                max="2024-06-04"
+              />
+            </td>
           </tr>
           <tr>
-              <td><label class="required">Sexo</label></td>
-              <td>
-                  <input type="radio" id="male" name="gender" value="male">
-                  <label for="male">Masculino</label>
-                  <input type="radio" id="female" name="gender" value="female">
-                  <label for="female">Feminino</label>
-              </td>
+            <td><label class="required">Sexo</label></td>
+            <td>
+              <input type="radio" id="male" name="gender" value="male" />
+              <label for="male">Masculino</label>
+              <input type="radio" id="female" name="gender" value="female" />
+              <label for="female">Feminino</label>
+            </td>
           </tr>
           <tr>
-              <td><label for="maritalStatus" class="required">Estado Civil</label></td>
-              <td>
-                  <select id="maritalStatus" name="maritalStatus">
-                      <option value="single">Solteiro(a)</option>
-                      <option value="married">Casado(a)</option>
-                      <option value="other">Outros</option>
-                  </select>
-              </td>
+            <td>
+              <label for="marital" class="required">Estado Civil</label>
+            </td>
+            <td>
+              <select id="marital" name="marital">
+                <option value="single">Solteiro(a)</option>
+                <option value="married">Casado(a)</option>
+                <option value="other">Outros</option>
+              </select>
+            </td>
           </tr>
           <tr>
-              <td><label for="interests">Áreas de Interesse</label></td>
-              <td>
-                  <select id="interests" name="interests" multiple>
-                      <option value="analysis">Análise</option>
-                      <option value="db">Banco de Dados</option>
-                      <option value="dev">Desenvolvimento</option>
-                      <option value="software">Engenharia de Software</option>
-                      <option value="networks">Redes de Computadores</option>
-                  </select>
-              </td>
+            <td><label for="interests">Áreas de Interesse</label></td>
+            <td>
+              <select id="interests" name="interests" multiple>
+                <option value="analysis">Análise</option>
+                <option value="db">Banco de Dados</option>
+                <option value="dev">Desenvolvimento</option>
+                <option value="software">Engenharia de Software</option>
+                <option value="networks">Redes de Computadores</option>
+              </select>
+            </td>
           </tr>
           <tr>
-              <td colspan="2">
-                  <button type="submit">Cadastrar</button>
-              </td>
+            <td colspan="2">
+              <button type="submit">Cadastrar</button>
+            </td>
           </tr>
-      </table>
-  </form>
-  <h2>Entradas Enviadas</h2>
-  <table id="submissionsTable">
-      <thead>
-          <tr>
-              <th>Nome Completo</th>
-              <th>Email</th>
-              <th>Data de Nascimento</th>
-              <th>Sexo</th>
-              <th>Estado Civil</th>
-              <th>Áreas de Interesse</th>
-              <th>Ações</th>
-          </tr>
-      </thead>
-      <tbody>
-      </tbody>
-  </table>
+        </table>
       </form>
     </div>
     <script src="script.js"></script>
